feature_test: updated the app
The application was slightly updated to test the github actions.

--- a/myProject/application0/templates/application0.html
+++ b/myProject/application0/templates/application0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Coin Flip</title>
+    <title>Coin Flip Application</title>
 </head>
 <body>
     <h1>Coin Flip Result:</h1>
