feature_test: updated the app for ci testing
The application was slightly changed to observe the ci workflow.

--- a/myProject/application0/templates/application0.html
+++ b/myProject/application0/templates/application0.html
@@ -4,7 +4,7 @@
     <title>Coin Flip Application</title>
 </head>
 <body>
-    <h1>Coin Flip Application!:</h1>
+    <h1>Coin Flip Application!</h1>
     <p>The coin landed on {{ result }}!</p>
 </body>
 </html>
