--- a/startupPredictor/startupPredictor/static/css/style.css
+++ b/startupPredictor/startupPredictor/static/css/style.css
@@ -1,9 +1,41 @@
+body {
+  font-family: 'Montserrat-Black 900', sans-serif;
+  color: #003D1F;
+  background-color: #FAF5E9;
+}
+
+h1 {
+  font-family: 'Montserrat-Black 900', sans-serif;
+  font-size: 99px;
+  padding:0px 50px;
+}
+
+
+p {
+  font-family: 'Montserrat-Medium', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.5;
+    max-width: 1300px;
+    margin-bottom: 40px;
+}
+
+button {
+  background-color: #0A6522;
+  color: #FAF5E9;
+  border: none;
+  padding: 10px;
+  font-family: 'Montserrat-Black 900', sans-serif;
+  font-weight: bold;
+  font-size: 2.0em;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #666;
+  background-color: #FAF5E9;
   position: fixed;
   top: 0;
   width: 100%;
@@ -12,20 +44,35 @@ ul {
 li {
   float: left;
   border-right: 1px solid #bbb;
+  position: relative; /* add position:relative to the li element */
+}
+
+li ul {
+  position: absolute;
+  left: 0; /* change left to 0 to position the submenu on the left side of the parent menu item */
+  top: 100%; /* set top to 100% to position the submenu below the parent menu item */
+  display: none;
+}
+
+li:hover ul {
+  display: block;
 }
 
 li a {
   display: block;
-  color: white;
+  color: #FAF5E9; /* change link color to green */
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  background-color: #0A6522; /* change background color to ivory */
 }
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #111;
+  background-color: #FEFD97;
+  color: #0A6522; /* change link color to ivory */
 }
+
 
 .active {
   background-color: #4CAF50;
@@ -58,7 +105,7 @@ li a:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .input-group label {
@@ -80,12 +127,27 @@ li a:hover {
   justify-content: center;
 }
 
+/* Invert the button colors */
+.button-group button {
+  background-color: #0A6522;
+  color: #FAF5E9;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.button-group button:hover {
+  background-color: #FEFD97;
+  color: #0A6522;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 46.4px;   /* Height of the footer */
-  background-color: #666;
+  background-color: #FAF5E9;
   color: white; /* Set the color of the text to white */
   text-align: center; /* Center the text within the footer */
 }
@@ -109,3 +171,138 @@ li a:hover {
   margin-top: 20px;
   text-align: center;
 }
+
+/* Set up the layout of the sections */
+.section {
+  height: calc(100vh - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: #fff;
+  text-align: center;
+}
+
+section#section1 {
+  background-color: #121212;
+  color:#FEFD97;
+  font-family: 'Montserrat', sans-serif;
+  padding: 50px 50px;
+  height: calc(100vh - 120px); 
+}
+
+section#section1 h1 {
+  font-family: 'Montserrat-ExtraBold', sans-serif;
+  font-size: 99px;
+  text-align: left;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+section#section1 p {
+  font-family: 'Montserrat-Medium', sans-serif;
+  font-size: 18px;
+  text-align: right;
+  line-height: 1.5;
+  max-width: 800px;
+  color: #FAF5E9;
+  margin: 0 auto;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+
+
+#sectionx {
+  background-color: #FAF5E9;
+  color: #003D1F;
+  font-family: 'Montserrat', sans-serif;
+  height: calc(100vh - 60px);
+  padding: 50px 50px;
+}
+
+#sectionx h2 {
+  font-family: 'Montserrat-ExtraBold', sans-serif;
+  font-size: 70px;
+  text-align: left;
+  text-transform: uppercase;
+  margin-top: -300px;
+}
+
+#sectionx p {
+  font-family: 'Montserrat-Medium', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.5;
+    max-width: 1300px;
+    margin-bottom: 50px;
+}
+
+#sectionx .subtitle {
+  font-family: 'Montserrat-Medium', sans-serif;
+}
+
+
+#sectiony {
+  background-color: #121212;
+  color: #FAF5E9;
+  font-family: 'Montserrat', sans-serif;
+  height: calc(100vh - 60px);
+  padding: 50px;
+}
+
+#sectiony h2 {
+    color: #FEFD97;
+    font-family: 'Montserrat-ExtraBold', sans-serif;
+    font-size: 70px;
+    text-align: left;
+    text-transform: uppercase;
+    margin-top: -300px;
+  }
+  
+  #sectiony p {
+    font-family: 'Montserrat-Medium', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.5;
+    max-width: 1300px;
+    margin-bottom: 50px;
+  }
+
+#sectiony .subtitle {
+  font-family: 'Montserrat-Medium', sans-serif;
+}
+
+
+.loader {
+  background-color: black;
+  color: white;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat-Black 900', sans-serif;
+}
+
+.loader p {
+  color: white;
+  font-size: 24px;
+}
+
+.progress-bar {
+  width: 500px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: white;
+  border: 3px solid white;
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  background-color: green;
+  border-radius: 10px;
+}
+
+
